frontend/test/should_pass/Metamodel.gm

node class MyNode
{
	function GetInterger():int
	{
		return(1);
	}
}