frontend/test/should_fail/computations_no_exec_method2.gm
node class N
{
	procedure bar() : (int)
	{
		exec( t() ); // no exec in (procedure) method 
		return(42);
	}
}
